--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ pyrogram>=2.0.30
  marshmallow==3.14.1 
  umongo==3.0.1 
  requests 
- bs4  
+ bs4 
+ git+https://github.com/Joelkb/cinemagoer
  shortzy 
  datetime 
  pytz 
@@ -26,7 +27,7 @@ youtube-dl
 requests 
   
  #---imdb---# 
- cinemagoer==2023.5.1 
+ cinemagoer==2023.10.22
   
  #---others----# 
  opencv-python-headless==4.7.0.68 
